add password confirm styling issue

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         </p>
         <p class="password">
             <label for="password">Password:</label>
-            <input type="text" name="" id="password" required minlength="8" >
+            <input type="password" name="" id="password" required minlength="8" >
             <span></span>
             <img src="" alt="">
         </p>
         <p class="confirm">
             <label for="password-confirm">Confirm Password:</label>
-            <input type="text" name="" id="password-confirm" required minlength="8">
+            <input type="password" name="" id="password-confirm" required >
             <span></span>
             <img src="" alt="">
         </p>
